charts/synapse/tests/golden/fixtures/test-well-known-httproute.golden.yaml
---
# Source: synapse/templates/well-known-httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: well-known
spec:
  parentRefs:
    - name: matrix-gateway
      namespace: gateway-system
  hostnames:
    - NOT-CONFIGURED
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /.well-known/matrix
      backendRefs:
        - name: well-known
          port: 80
